# pokemon-cardfolio

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: cache.py  config.py  db.py  deps.py  errors.py  main.py  models.py  scheduler.py
backend/app/providers/: base.py  cached.py  fx_provider.py  graded_base.py  graded_null.py  pokemontcgio.py  query.py
backend/app/repositories/: card_repository.py  holding_repository.py  portfolio_repository.py  price_repository.py  sale_repository.py  watch_repository.py
backend/app/routers/: cards.py  digest.py  fx.py  grading.py  history.py  holdings.py  insights.py  opportunities.py  price_check.py  prices.py  sales.py  schemas.py  store.py  watchlist.py
backend/app/services/: collection_service.py  digest_service.py  grading_service.py  insights_service.py  opportunity_service.py  price_check_service.py  price_service.py  sale_service.py  store_service.py
backend/tests/: conftest.py  test_cached_provider.py  test_collection_service.py  test_db_migrations.py  test_digest_service.py  test_fx_provider.py  test_grading_service.py  test_health.py  test_insights_service.py  test_integration_flow.py  test_models.py  test_opportunity_service.py  test_price_check_router.py  test_price_check_service.py  test_price_service.py  test_provider.py  test_repositories.py  test_routers.py  test_sale_service.py  test_scheduler.py  test_search_query.py  test_store_router.py  test_store_service.py
web/: .dockerignore  .gitignore  Dockerfile  package-lock.json  (+1 more)
(+40 files in other folders)
