[project]
name = "cardfolio-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "sqlmodel>=0.0.16",
  "httpx>=0.27",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "anyio>=4.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
